--- a/assets/assets/i18n/en.json
+++ b/assets/assets/i18n/en.json
@@ -16,11 +16,21 @@
     "language_default": "System Default",
     "about": "About",
     "help": "Help",
-    "total_points": "Total Points: ",
+    "help_title_1": "Welcome!",
+    "help_description_1": "This is a quiz game to help you check up on your anime/manga/games knowledge and hopefully help you find some new cool pics.",
+    "help_title_2": "Always Fresh",
+    "help_description_2": "The quiz is generated from the top posts from Danbooru, so the game is unbiased and ever-changing.",
+    "help_title_3": "Guess Character or Source",
+    "help_description_3": "You can try to guess the show name or character name on a random selection of popular posts...",
+    "help_title_4": "Find your Favorites",
+    "help_description_4": "...or you can search your favorite show and play a quiz about its characters.",
+    "help_title_5": "Have fun!",
+    "help_description_5": "If you like any pic, you can download it or check out the original Danbooru post for more info about it.",
+    "total_points": "Points Earned: ",
     "cost": "Cost: ",
     "points": "Points",
     "error_danbooru": "Failed to fetch data from Danbooru.",
-    "error_no_posts": "Not enough posts of this source in Danbooru.",
+    "error_no_posts": "Not enough posts of different characters from this source found.",
     "correct": "Correct",
     "incorrect": "Wrong",
     "fullscreen": "Fullscreen",
@@ -62,6 +72,8 @@
     "quiz_title_characters_popular_characters": "Popular Characters",
     "quiz_title_characters_from_popular_origins": "from Popular Sources",
     "atocomplete_no_matches": "No Matches Found",
+    "source_quiz_textfield_hint": "Source name...",
+    "character_quiz_textfield_hint": "Character name...",
     "submit": "Submit",
     "no_cheat": "No cheating!!",
     "no_cheat_description": "You can open the Danbooru post after you answer.",
@@ -74,13 +86,18 @@
     "more_pics_confirmation_character": "Want to see more images of this character?",
     "more_pics_confirmation_source": "Want to see more images of this source?",
     "more_pics_confirmation_description": "You will see 4 more images.",
+    "more_pics_not_found_character": "No more images of this character found.",
+    "more_pics_not_found_source": "No more images of this source found.",
+    "more_pics_semi_found_1": "Only ",
+    "more_pics_semi_found_2": " images found.",
+    "more_pics_refund": "Your points were refunded.",
     "hint": "Reveal",
     "hint_confirmation": "Want to spend points to reveal the answer?",
     "hint_confirmation_description": "It will count as a correct answer.",
 
 
-    "about_version": "pre-alpha",
-    "about_copyright": "Copyright (c) 2020, wishmaster All Rights Reserved.",
-    "about_text": "This game was originally a practice project to learn programming, so I would really be grateful if someone ends up enjoying it. Thanks to Google's Flutter team and to the whole community of Danbooru for making it possible. All images belong to their awesome authors."
+    "about_version": "beta",
+    "about_copyright": "Copyright (c) 2021, From Zero  All Rights Reserved.",
+    "about_text": "This app was originally a practice project to learn programming, so we would really be grateful if someone ends up enjoying it. Thanks to Google's Flutter team and to the whole community of Danbooru for making it possible. All images belong to their awesome authors."
 
 }
