--- a/assets/assets/i18n/es.json
+++ b/assets/assets/i18n/es.json
@@ -1,86 +1,103 @@
 {
-  "close": "Cerrar",
-  "search": "Buscar",
-  "home": "Inicio",
-  "not_found": "Página no Encontrada",
-  "theme": "Tema",
-  "light_theme": "Tema Claro",
-  "dark_theme": "Tema Oscuro",
-  "default_theme": "Por Defecto",
-  "picture_resolution": "Resolución de Imagen",
-  "low_picture_resolution": "Resolución Baja",
-  "normal_picture_resolution": "Resolución Normal",
-  "low_picture_resolution_description": "Las imágenes serán descargadas con baja resolución para disminuir el consumo de datos.",
-  "normal_picture_resolution_description": "Las imágenes serán descargadas con resolución máxima.",
-  "language": "Idioma",
-  "language_default": "Por Defecto",
-  "about": "Acerca de...",
-  "help": "Ayuda",
-  "total_points": "Puntuación Total: ",
-  "cost": "Costo: ",
-  "points": "Puntuación",
-  "error_danbooru": "No se pudieron descargar datos de Danbooru.",
-  "error_no_posts": "No hay suficientes posts de este origen en Danbooru.",
-  "correct": "Correcto",
-  "incorrect": "Incorrecto",
-  "fullscreen": "Fullscreen",
-  "download": "Descargar",
-  "open_danbooru_post": "Abrir Post de Danbooru",
-  "error_image": "No se pudo descargar imagen.",
-  "retry": "Reintentar",
-  "search...": "Buscar origen...",
-  "quiz_origin": "Quiz de Origen",
-  "origin": "Origen",
-  "quiz_characters": "Quiz de Personajes",
-  "character": "Personaje",
-  "quiz_characters_from": "Personajes de...",
-  "quiz_type": "Tipo",
-  "quiz_type_all": "Todos",
-  "search_no_matches": "No Se Encontraron Resultados.",
-  "search_no_matches_description": "Actualmente, sólo se puede buscar tags de copyright de danbooru (anime, juegos...) para jugar un quiz sobre sus personajes.",
-  "exit_quiz_confirmation": "¿Seguro que quiere salir del Quiz?",
-  "exit_quiz_confirmation_description": "Perderá su progreso en este Quiz.",
-  "cancel": "Cancelar",
-  "quit": "Salir",
-  "play_again": "Jugar de Nuevo",
-  "play_again_description": "Con nuevas imágenes al azar",
-  "back_to_menu": "Volver al menú",
-  "start_quiz": "Comenzar Quiz",
-  "result_comment_0": "really?",
-  "result_comment_1": "Triste.",
-  "result_comment_2": "No muy bien...",
-  "result_comment_3": "Bien",
-  "result_comment_4": "Genial!",
-  "result_comment_5": "Perfecto!!!",
-  "quiz_title_origin_popular_origins": "Orígenes Populares",
-  "quiz_title_origin_popular_posts": "Imágenes Populares",
-  "quiz_title_origin_new_posts": "Imágenes Nuevas",
-  "quiz_title_origin_random_posts": "Imágenes Aleatorias",
-  "quiz_title_characters_popular_posts": "Imágenes Populares",
-  "quiz_title_characters_new_posts": "Imágenes Nuevas",
-  "quiz_title_characters_random_posts": "Imágenes Aleatorias",
-  "quiz_title_characters_popular_characters": "Personajes Populares",
-  "quiz_title_characters_from_popular_origins": "de Orígenes Populares",
-  "atocomplete_no_matches": "No Hay Resultados",
-  "submit": "Aceptar",
-  "no_cheat": "Sin trampas!!",
-  "no_cheat_description": "Podrás abrir el post de Danbooru luego de responder.",
-  "skip": "Saltar",
-  "skip_confirmation": "¿Seguro que quiere saltar esta imagen?",
-  "skip_confirmation_description": "Contará como una respuesta incorrecta.",
-  "skip_your_answer": "Tu Respuesta: ",
-  "skip_skipped": "Saltada",
-  "more_pics": "Más Imágenes",
-  "more_pics_confirmation_character": "¿Quiere ver más imágenes de este personaje?",
-  "more_pics_confirmation_source": "¿Quiere ver más imágenes de este origen?",
-  "more_pics_confirmation_description": "Se mostrarán 4 imágenes más.",
-  "hint": "Revelar",
-  "hint_confirmation": "¿Quiere gastar puntos para revelar la respuesta?",
-  "hint_confirmation_description": "Contará como una respuesta correcta.",
+    "close": "Cerrar",
+    "search": "Buscar",
+    "home": "Inicio",
+    "not_found": "Página no Encontrada",
+    "theme": "Tema",
+    "light_theme": "Tema Claro",
+    "dark_theme": "Tema Oscuro",
+    "default_theme": "Por Defecto",
+    "picture_resolution": "Resolución de Imagen",
+    "low_picture_resolution": "Resolución Baja",
+    "normal_picture_resolution": "Resolución Normal",
+    "low_picture_resolution_description": "Las imágenes serán descargadas con baja resolución para disminuir el consumo de datos.",
+    "normal_picture_resolution_description": "Las imágenes serán descargadas con resolución máxima.",
+    "language": "Idioma",
+    "language_default": "Por Defecto",
+    "about": "Acerca de...",
+    "help": "Ayuda",
+    "help_title_1": "Binvenido!",
+    "help_description_1": "Este es un juego para ayudarte a comprobar tus conocimientos de anime/manga/juegos y de paso ayudarte a conocer nuevas hermosas ilustraciones.",
+    "help_title_2": "Siempre Fresco",
+    "help_description_2": "El quiz se genera a partir de las imágenes más populares de Danbooru, por lo que el juego es dinámico e imparcial.",
+    "help_title_3": "Personaje u Origen",
+    "help_description_3": "Puedes intentar responder el nombre del personaje o de la serie, a partir de una selección aleatoria de las imágenes más populares...",
+    "help_title_4": "Busca tus favoritos",
+    "help_description_4": "...o puedes buscar tu serie favorita y jugar un quiz sobre sus personajes.",
+    "help_title_5": "Diviértete!",
+    "help_description_5": "Si ves una imágen que te guste, puedes descargarla o abrir el post original de Danbooru para ver más información de ella.",
+    "total_points": "Puntos Obtenidos: ",
+    "cost": "Costo: ",
+    "points": "Puntuación",
+    "error_danbooru": "No se pudieron descargar datos de Danbooru.",
+    "error_no_posts": "No se encontraron suficientes posts de distintos personajes de este origen.",
+    "correct": "Correcto",
+    "incorrect": "Incorrecto",
+    "fullscreen": "Fullscreen",
+    "download": "Descargar",
+    "open_danbooru_post": "Abrir Post de Danbooru",
+    "error_image": "No se pudo descargar imagen.",
+    "retry": "Reintentar",
+    "search...": "Buscar origen...",
+    "quiz_origin": "Quiz de Origen",
+    "origin": "Origen",
+    "quiz_characters": "Quiz de Personajes",
+    "character": "Personaje",
+    "quiz_characters_from": "Personajes de...",
+    "quiz_type": "Tipo",
+    "quiz_type_all": "Todos",
+    "search_no_matches": "No Se Encontraron Resultados.",
+    "search_no_matches_description": "Actualmente, sólo se puede buscar tags de copyright de danbooru (anime, juegos...) para jugar un quiz sobre sus personajes.",
+    "exit_quiz_confirmation": "¿Seguro que quiere salir del Quiz?",
+    "exit_quiz_confirmation_description": "Perderá su progreso en este Quiz.",
+    "cancel": "Cancelar",
+    "quit": "Salir",
+    "play_again": "Jugar de Nuevo",
+    "play_again_description": "Con nuevas imágenes al azar",
+    "back_to_menu": "Volver al menú",
+    "start_quiz": "Comenzar Quiz",
+    "result_comment_0": "really?",
+    "result_comment_1": "Triste.",
+    "result_comment_2": "No muy bien...",
+    "result_comment_3": "Bien",
+    "result_comment_4": "Genial!",
+    "result_comment_5": "Perfecto!!!",
+    "quiz_title_origin_popular_origins": "Orígenes Populares",
+    "quiz_title_origin_popular_posts": "Imágenes Populares",
+    "quiz_title_origin_new_posts": "Imágenes Nuevas",
+    "quiz_title_origin_random_posts": "Imágenes Aleatorias",
+    "quiz_title_characters_popular_posts": "Imágenes Populares",
+    "quiz_title_characters_new_posts": "Imágenes Nuevas",
+    "quiz_title_characters_random_posts": "Imágenes Aleatorias",
+    "quiz_title_characters_popular_characters": "Personajes Populares",
+    "quiz_title_characters_from_popular_origins": "de Orígenes Populares",
+    "atocomplete_no_matches": "No Hay Resultados",
+    "source_quiz_textfield_hint": "Origen...",
+    "character_quiz_textfield_hint": "Personaje...",
+    "submit": "Aceptar",
+    "no_cheat": "Sin trampas!!",
+    "no_cheat_description": "Podrás abrir el post de Danbooru luego de responder.",
+    "skip": "Saltar",
+    "skip_confirmation": "¿Seguro que quiere saltar esta imagen?",
+    "skip_confirmation_description": "Contará como una respuesta incorrecta.",
+    "skip_your_answer": "Tu Respuesta: ",
+    "skip_skipped": "Saltada",
+    "more_pics": "Más Imágenes",
+    "more_pics_confirmation_character": "¿Quiere ver más imágenes de este personaje?",
+    "more_pics_confirmation_source": "¿Quiere ver más imágenes de este origen?",
+    "more_pics_confirmation_description": "Se mostrarán 4 imágenes más.",
+    "more_pics_not_found_character": "No se encontraron más imágenes de este personaje.",
+    "more_pics_not_found_source": "No se encontraron más imágenes de este origen.",
+    "more_pics_semi_found_1": "Sólo se encontraron ",
+    "more_pics_semi_found_2": " imágenes.",
+    "more_pics_refund": "Tus puntos fueron devueltos.",
+    "hint": "Revelar",
+    "hint_confirmation": "¿Quiere gastar puntos para revelar la respuesta?",
+    "hint_confirmation_description": "Contará como una respuesta correcta.",
 
 
-  "about_version": "pre-alpha",
-  "about_copyright": "Copyright (c) 2020, wishmaster Todos los Derechos Reservados.",
-  "about_text": "Este juego comenzó como un proyecto de práctica para aprender programación, así que estaría realmente agradecido si alguien termina disfrutámdolo. Gracias al equipo de Flutter de Google y a toda la comunidad de Danbooru por hacerlo posible. Todas las imágenes son propiedad de sus talentosos autores."
+    "about_version": "beta",
+    "about_copyright": "Copyright (c) 2021, From Zero  Todos los Derechos Reservados.",
+    "about_text": "Esta aplicación comenzó como un proyecto de práctica para aprender programación, así que estaríamos realmente agradecidos si alguien termina divirtiéndose con ella. Gracias al equipo de Flutter de Google y a la comunidad de Danbooru por hacerlo posible. Todas las imágenes son propiedad de sus talentosos autores."
 
 }
